--- a/tutorial.html
+++ b/tutorial.html
@@ -30,7 +30,7 @@ Get ready to kill as many enemies as possible before the timer expires! Use:
 </p>
 
 <p style="font-family: Impact; font-size: 40px; color: #00FF00; text-align:center;">
-<a href='index.php'> Back to Homepage</a>
+<a href='index.html'> Back to Homepage</a>
 </p>
 
 </body>
