--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	h2	{clear:both;padding-top:20px;}
 	ul {list-style:none;margin:0;padding:0;}
 	li {float:center;width:100px;margin:0;padding:0;text-align:center;}
-	li a {display:block;padding:5px 10px;height:100%;color:#FFF;text-decoration:none;border-right:1px solid #FFF;}
+	li a {display:block;padding:5px 10px;height:100%;color:#000000;text-decoration:none; font-family: Impact; border-right:1px solid #FFF;}
 	li a {background:url(bg2.jpg) repeat 0 0;}
 	li a:hover, li a:focus, li a:active {background-position:-150px 0;}
 	#a a {background:url(bg.jpg) repeat -20px 35px;}
